2010-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* lo-specfun.cc (erfcx, erfcx_impl): New functions.
	* lo-specfun.h: Declare erfcx.

2010-03-03  John W. Eaton  <jwe@octave.org>

	* oct-convn.cc (convolve): Cast int constant to octave_idx_type in
	call to std::max.

2010-03-03  Jaroslav Hajek  <highegg@gmail.com>

	* oct-convn.cc (convolve_2d_axpy_kernel, convolve_2d_axpy): Remove.
	(convolve_2d): Forward to Fortran implementations, add inner flag.
	(convolve_nd): Handle inner-convolution case.
	(convolve): Ditto.

2010-03-02  Jaroslav Hajek  <highegg@gmail.com>

	* oct-convn.h, oct-convn.cc: New sources.
	* Makefile.am: Include them.

2010-03-01  David Bateman  <dbateman@free.fr>

	* Sparse.cc (Sparse<T>::maybe_delete_elements (idxx_vector&)):
	Special case the deletion of elements in sparse vectors.
	(Sparse<T>::index (idx_vector&, int) const): Special case indexing
	of sparse matrices with ranges with a step of 1.
	* Sparse.h: Include oct-mem.h for the copy_or_memcpy declaration.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* Makefile.am ($(srcdir)/vx-op-inc.mk, $(srcdir)/mx-op-inc.mk,
	$(srcdir)/smx-op-inc.mk, $(srcdir)/vx-op-src.mk,
	$(srcdir)/mx-op-src.mk, $(srcdir)/smx-op-src.mk): New targets.

	* config-ops.sh: Accept top_srcdir argument.  Work from build
	directory too, not just source tree.

2010-02-28  Michael Goffioul  <michael.goffioul@gmail.com>

	* Array-C.cc (DiagArray2<Complex>::Proxy): Remove explicit
	instantiation under MSVC.
	Array-d.cc (DiagArray2<double>::Proxy): Ditto.
	Array-f.cc (DiagArray2<float>::Proxy): Ditto.
	Array-fC.cc (DiagArray2<FloatComplex::Proxy): Ditto.

2010-02-28  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (gripe_index_out_of_range): Throw errors with id.
	(gripe_nonconformant): Likewise.
	(error_id_index_out_of_bounds, error_id_invalid_index,
	error_id_nonconformant_args): New variables.
	(gripe_invalid_index): New function.
	* Array-util.h: Declare them.